feat:20250822 css lesson

--- a/learning_logs/20250822.md
+++ b/learning_logs/20250822.md
@@ -142,3 +142,13 @@ https://showcases.yalco.kr/html-css/02-02/04.html
   - 근데 CSS라서 쉼표가 없을 것 같은데 또 있습니다.
 
 ## 문단과 목록 스타일
+UI 구현 - 9월 2일 시험 예정 (HTML / CSS / Javascript) - 1과목
+python 수업 - 9월 8일 시험 예정
+SQL 수업 - 9월 18일 시험 예정
+
+9월 19일 부터 Springboot / React -> 백/프론트 통합 예제 프로젝트를 동시에 만들 예정.
+이 부분이 끝나면 팀 리빌딩 후 초기 기획안 발표가 있을 예정. - 팀원이 발표
+1차 발표 / 강사 피드백 / 2차 발표
+
+팀 프로젝트로 웹 서비스 구현 12월 9일 까지 완료 및 발표자료 / 준비를 마쳐야 함
+12월 10일 최종 발표 및 수료식 - 대부분 이때 팀장님 발표 혹은 팀 전체가 발표
